--- a/main.html
+++ b/main.html
@@ -7,6 +7,32 @@
 </head>
 
 <body>
+	<header class="head">
+	<h1>Shaw's News</h1>
+		</header>
+	<section class="container">
+		<div class="container-1">
+			<h2>
+				Latest news Articles
+			</h2>
+			<ul>
+				<li>Article 1</li>
+				<li>Article 2</li>
+				<li>Article 3</li>
+			</ul>
+		</div>
+		<div class="container-2">
+			<h2>Main Article</h2>
+			<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum consequatur harum est, provident atque voluptatum quod mollitia laudantium eos non tempora quas? At, architecto laborum dolorum repellat libero vitae cumque?</p>
+			
+		</div>
+		<div class="container-3">
+			<h2>Pictorial News</h2>
+			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg">
+			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG">
+			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG">
+		</div>
+	</section>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
