--- a/main.html
+++ b/main.html
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-	<header class="head">
+	<header class="header">
 	<h1>Shaw's News</h1>
 		</header>
 	<section class="container">
-		<div class="container-1">
+		<div class="latest-news-section">
 			<h2>
 				Latest news Articles
 			</h2>
@@ -26,7 +26,7 @@
 			<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum consequatur harum est, provident atque voluptatum quod mollitia laudantium eos non tempora quas? At, architecto laborum dolorum repellat libero vitae cumque?</p>
 			
 		</div>
-		<div class="container-3">
+		<div class="pictorial-news-section">
 			<h2>Pictorial News</h2>
 			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg">
 			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG">
